--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -25,6 +25,7 @@
 <p class="p1"><a href="https://sergds.ga/sergstuff/ID1.zip">ID1.zip</a></p>
 <p class="p1"><a href="https://sergds.ga/sergstuff/ldae.apk">ldae.apk</a></p>
 <p class="p1"><a href="https://sergds.ga/sergstuff/mhs.apk">mhs.apk</a></p>
+<p class="p1"><a href="https://sergds.ga/sergstuff/fullmix.mp3">fullmix.mp3</a></p>
 <p class="p2"><br></p>
 <p class="p1"><span class="s1">⇘</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">⇙</span></p>
 <p class="p1"><span class="Apple-converted-space">  </span>SERGDS</p>
