--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
+  <title>Download DOCKS</title>
   <meta name="SERGDS" content="is Not a JS Programmer">
   <meta name="SERGDS" content="is Not a HTML Programmer">
   <style type="text/css">
@@ -11,7 +11,7 @@
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #722cfd; background-color: #d1eb2b; min-height: 14.0px}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Arial Unicode MS'; color: #722cfd; background-color: #d1eb2b}
     span.s1 {font: 12.0px 'Arial Unicode MS'}
-    span.Apple-tab-span {white-space:pre}
+    span.sds-tab-span {white-space:pre}
   </style>
 </head>
 <body>
@@ -27,8 +27,8 @@
 <p class="p1"><a href="https://sergds.ga/sergstuff/mhs.apk">mhs.apk</a></p>
 <p class="p1"><a href="https://sergds.ga/sergstuff/fullmix.mp3">fullmix.mp3</a></p>
 <p class="p2"><br></p>
-<p class="p1"><span class="s1">⇘</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">⇙</span></p>
+<p class="p1"><span class="s1">⇘</span><span class="sds-tab-span">	</span><span class="sds-tab-span">	</span><span class="s1">⇙</span></p>
 <p class="p1"><span class="Apple-converted-space">  </span>SERGDS</p>
-<p class="p3">⇗<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>⇖</p>
+<p class="p3">⇗<span class="sds-tab-span">	</span><span class="Apple-tab-span">	</span>⇖</p>
 </body>
 </html>
