--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -29,6 +29,6 @@
 <p class="p2"><br></p>
 <p class="p1"><span class="s1">⇘</span><span class="sds-tab-span">	</span><span class="sds-tab-span">	</span><span class="s1">⇙</span></p>
 <p class="p1"><span class="Apple-converted-space">  </span>SERGDS</p>
-<p class="p3">⇗<span class="sds-tab-span">	</span><span class="Apple-tab-span">	</span>⇖</p>
+<p class="p3">⇗<span class="sds-tab-span">	</span><span class="sds-tab-span">	</span>⇖</p>
 </body>
 </html>
