--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -18,7 +18,7 @@
 <p class="p1">SERGDS’ DOWNLOAD DIRECTORY</p>
 <p class="p2"><br></p>
 <p class="p1"><a href="https://sergds.ga">go_back</a></p>
-<p class="p1">——————————————————————————————</p>
+<p class="p1">WHY I DON'T USE GOOGLE CLOUD STORAGE FOR THAT?</p>
 <p class="p1">Files:</p>
 <p class="p1"><a href="https://sergds.ga/sergstuff/povar90.zip">povar90.zip</a></p>
 <p class="p1"><a href="https://sergds.ga/sergstuff/agent.py.zip">agent.py.zip</a></p>
