--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -25,15 +25,15 @@
 <p class="p1"><span class="s1">SERGDS’ DOWNLOAD DIRECTORY</span></p>
 <p class="p2"><span class="s2"><br>
 <a href="http://sergds.ga/xon_ogg/"><span class="s3">Xonotic</span></a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/">go_back</a></span></p>
+<p class="p3"><span class="s4"><a href="/">go_back</a></span></p>
 <p class="p1"><span class="s1">WHY I DON'T USE GOOGLE CLOUD STORAGE FOR THAT?</span></p>
 <p class="p1"><span class="s1">Files:</span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/povar90.zip">povar90.zip</a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/agent.py.zip">agent.py.zip</a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/ID1.zip">ID1.zip</a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/ldae.apk">ldae.apk</a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/mhs.apk">mhs.apk</a></span></p>
-<p class="p3"><span class="s4"><a href="https://sergds.ga/sergstuff/fullmix.mp3">fullmix.mp3</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/povar90.zip">povar90.zip</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/agent.py.zip">agent.py.zip</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/ID1.zip">ID1.zip</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/ldae.apk">ldae.apk</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/mhs.apk">mhs.apk</a></span></p>
+<p class="p3"><span class="s4"><a href="/sergstuff/fullmix.mp3">fullmix.mp3</a></span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p4"><span class="s5">⇘</span><span class="s1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span><span class="s5">⇙</span></p>
