--- a/sergstuff/dindex.html
+++ b/sergstuff/dindex.html
@@ -24,7 +24,7 @@
 <body>
 <p class="p1"><span class="s1">SERGDS’ DOWNLOAD DIRECTORY</span></p>
 <p class="p2"><span class="s2"><br>
-<a href="http://sergds.ga/xon_ogg/"><span class="s3">Xonotic</span></a></span></p>
+<a href="/xon_ogg/"><span class="s3">Xonotic</span></a></span></p>
 <p class="p3"><span class="s4"><a href="/">go_back</a></span></p>
 <p class="p1"><span class="s1">WHY I DON'T USE GOOGLE CLOUD STORAGE FOR THAT?</span></p>
 <p class="p1"><span class="s1">Files:</span></p>
