--- a/xon_ogg/index.html
+++ b/xon_ogg/index.html
@@ -16,28 +16,28 @@
 <body>
 <p class="p1"><span class="s1"><i>Xonotic music dir</i></span></p>
 <p class="p2"><span class="s1"><i></i></span><br></p>
-<p class="p1"><a href="http://sergds.ga/"><i>../</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/also-t.ogg"><i>also-t.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/gogetem.ogg"><i>gogetem.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/heavymetal.ogg"><i>heavymetal.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/inner-peace.ogg"><i>inner-peace.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/kojinsmokin.ogg"><i>kojinsmokin.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/meltdown.ogg"><i>meltdown.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/mickrippon_jumpinginspace.ogg"><i>mickrippon_jumpinginspace.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/nanite.ogg"><i>nanite.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/neon.ogg"><i>neon.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/ninesix.ogg"><i>ninesix.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/northern-lights.ogg"><i>northern-lights.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/out-there.ogg"><i>out-there.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/quiet.ogg"><i>quiet.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/rising-of-the-phoenix.ogg"><i>rising-of-the-phoenix.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/sensation3.ogg"><i>sensation3.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/sixtyfour.ogg"><i>sixtyfour.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/stairs.ogg"><i>stairs.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/the-laws-of-physics.ogg"><i>the-laws-of-physics.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/traveler.ogg"><i>traveler.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/variable.ogg"><i>variable.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/x-force.ogg"><i>x-force.ogg</i></a></p>
-<p class="p1"><a href="http://sergds.ga/xon_ogg/zzzzz.ogg"><i>zzzzz.ogg</i></a></p>
+<p class="p1"><a href="/"><i>../</i></a></p>
+<p class="p1"><a href="/xon_ogg/also-t.ogg"><i>also-t.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/gogetem.ogg"><i>gogetem.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/heavymetal.ogg"><i>heavymetal.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/inner-peace.ogg"><i>inner-peace.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/kojinsmokin.ogg"><i>kojinsmokin.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/meltdown.ogg"><i>meltdown.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/mickrippon_jumpinginspace.ogg"><i>mickrippon_jumpinginspace.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/nanite.ogg"><i>nanite.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/neon.ogg"><i>neon.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/ninesix.ogg"><i>ninesix.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/northern-lights.ogg"><i>northern-lights.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/out-there.ogg"><i>out-there.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/quiet.ogg"><i>quiet.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/rising-of-the-phoenix.ogg"><i>rising-of-the-phoenix.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/sensation3.ogg"><i>sensation3.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/sixtyfour.ogg"><i>sixtyfour.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/stairs.ogg"><i>stairs.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/the-laws-of-physics.ogg"><i>the-laws-of-physics.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/traveler.ogg"><i>traveler.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/variable.ogg"><i>variable.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/x-force.ogg"><i>x-force.ogg</i></a></p>
+<p class="p1"><a href="/xon_ogg/zzzzz.ogg"><i>zzzzz.ogg</i></a></p>
 </body>
 </html>
